--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@libsql/client": "^0.14.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
